# ananke

./: .ananke.toml  .ananke.toml.example  .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT_HISTORY.md  DOCUMENTATION_SUMMARY.md  Dockerfile  EXAMPLE_ENHANCEMENTS_REPORT.md  INSTALL_QUICKREF.md  LICENSE  LOCAL_CI.md  PERFORMANCE.md  PERFORMANCE_QUICKSTART.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  RELEASING.md  SECURITY.md  TEST_IMPLEMENTATION_GUIDE.md  TEST_INFRASTRUCTURE_SUMMARY.md  TEST_STRATEGY.md  TEST_SUMMARY.md  build.zig  build.zig.zon  build_helpers.zig  docker-compose.yml  generated.ts  test_constraints.json  test_ffi_roundtrip.zig  test_sample.ts  validate_links.sh
.beads/: dolt-server.activity  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: INTEGRATION_SUMMARY.md  README.md  benchmarks.yml  ci.yml  docs.yml  docs.yml.disabled  maze-tests.yml  maze-tests.yml.disabled  release.yml  release.yml.disabled  security.yml
archive/benchmarks/: BENCHMARK_FILE_LIST.txt  BENCHMARK_INDEX.md  OPTIMIZATION_RESULTS.md  README.md  baselines.json
archive/docs/: ARCHITECTURE_V2.md  CLAUDE_INTEGRATION.md  COMMUNITY.md  PHASE3_DOCUMENTATION_IMPROVEMENTS.md  ariadne-implementation-report.md
archive/maze/: ERROR_HANDLING_TEST_SUMMARY.md  INTEGRATION_TESTS_REPORT.md  TESTING_COMPLETE.md  (+2 more)
beads/: constraint-extraction.bead  implementation-phases.bead  inference-setup.bead
bench/: README.md  benchmark_runner.zig  cache_benchmarks.zig  compilation_benchmarks.zig  e2e_benchmarks.zig  extraction_benchmarks.zig
benchmarks/: BENCHMARK_GUIDE.md  FINAL_REPORT.md  PROFILING_REPORT.md
docs/: API.md  API_DOCUMENTATION_REPORT.md  API_ERROR_HANDLING.md  API_QUICK_REFERENCE.md  API_REFERENCE_RUST.md  API_REFERENCE_ZIG.md  ARCHITECTURE.md  BUILD_SYSTEM.md  CLASH_ALGEBRA.md  CLI_GUIDE.md  COMPILE_COMMAND.md  DEPLOYMENT.md  DOMAIN_FUSION.md  EVAL_GUIDE.md  EXTENDING.md  FAQ.md  FFI_GUIDE.md  FIM_GUIDE.md  GETTING_STARTED.md  HOMER_INTEGRATION.md  IMPLEMENTATION_PLAN.md  INDEX.md  INTERNALS.md  LANGUAGE_SUPPORT.md  LIBRARY_INTEGRATION.md  MODAL_INFRASTRUCTURE.md  PATTERN_REFERENCE.md  PHASE6_IR_GENERATOR_REPORT.md  PYTHON_API.md  QUICKSTART_ADVANCED.md  RELEASE_AUTOMATION.md  SECURITY_TEST_REPORT.md  SUPPORT.md  TROUBLESHOOTING.md  TYPE_INHABITATION.md  USER_GUIDE.md  ariadne-grammar.md
eval/: BASELINE_WINS_ANALYSIS.md  CONSTRAINT_PIPELINE.md  DEPLOYMENT_STATUS.md  EVALUATION_ISSUES.md  EVALUATION_REPORT.md  EVALUATION_REPORT_20251209.md  EVAL_GUIDE.md  IMPROVEMENT_SUMMARY.md  INTEGRATION_NOTES.md  MEMORY_LEAK_FIX.md  PLAN_test_infrastructure_fixes.md  README.md  STATUS.md  TASK_CREATION_GUIDE.md  main.zig  report_generator.py  runner.zig
eval/tasks/fixtures/rust/: Cargo.toml  actor_model.rs  actor_model_test.rs  chain_cache_1.rs  chain_cache_1_test.rs  chain_cache_2.rs  chain_cache_2_test.rs  chain_cache_3.rs  chain_cache_3_test.rs  iterator_chain.rs  iterator_chain_test.rs  result_handling.rs  result_handling_test.rs  state_machine.rs  state_machine_test.rs
examples/: README.md  SAMPLES.md  claude_integration.zig  constraints.json
homebrew/: ananke.rb
maze/: Cargo.toml  FILE_MANIFEST.txt  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  SUMMARY.txt  TEST_SUMMARY.md  build.rs  pyproject.toml
maze/.cargo/: audit.toml
maze/.github/workflows/: maze-tests.yml.disabled
maze/benches/: cache_performance.rs  constraint_compilation.rs  ffi_overhead.rs  orchestration.rs
maze/docs/: ensemble.md
maze/examples/: ensemble_example.rs  simple_generation.rs
maze/examples/python/: 01_simple_generation.py  02_json_schema_constraint.py  03_cache_management.py  04_health_check.py  05_batch_processing.py  06_cli_examples.sh
maze/modal_inference/: BEFORE_AFTER.md  BUG_FIX_REPORT.md  DEBUGGER_REPORT.md  DEPLOYMENT_REPORT.md  FIX_SUMMARY.md  QUICKSTART.md  README.md  README_FIRST.md  check_logs.py  client.py  config.yaml  deploy.sh  deploy_and_test.sh  inference.py  inference_qwen3.py  requirements.txt  simple_test.py  test_deployment.sh  test_endpoint.py  test_fix.py  test_generate.py  test_request.json
maze/python/ananke_cli/: __init__.py  main.py
maze/python/tests/: __init__.py  test_bindings.py  test_cli.py  test_phase7b.py
maze/src/: adaptive_selector.rs  diffusion.rs  ffi.rs  lib.rs  modal_client.rs  model_router.rs  model_selector.rs  progressive_refinement.rs  python.rs  strategy_stats.rs  telemetry.rs
maze/tests/: README.md  end_to_end_tests.rs  ffi_tests.rs  modal_client_tests.rs  orchestrator_tests.rs  zig_integration_test.rs
maze/tests/fixtures/: sample.py  sample.rs  sample.ts
maze/tests/integration/: README.md  helpers.rs  integration_tests.rs  mod.rs
maze/tests/integration/fixtures/: api_handler.ts  complex_auth.rs  data_processor.py
maze/tests/integration/mocks/: mod.rs  modal_service.rs
modal_inference/: .gitignore  ARCHITECTURE.md  FILES.md  Makefile  QUICKSTART.md  README.md  client.py  config.yaml  deploy.sh  example_usage.py  inference.py  requirements.txt  test_inference.py
scripts/: build-release.sh  bump-version.sh  health-check.sh  install.ps1  install.sh  local-ci.sh  package-release.sh  release-checklist.md  run_performance_analysis.sh  test-runner.sh  verify-release.sh
spec/: homer-spec.tps
src/: ananke_test_stub.zig  main.zig  root.zig
(+728 files in other folders)
