[package]
name = "maze"
version = "0.1.0"
edition = "2021"
authors = ["Ananke Contributors"]
description = "Maze orchestration layer for constrained code generation"
license = "MIT OR Apache-2.0"

[lib]
name = "maze"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for Modal/inference service communication
reqwest = { version = "0.11", features = ["json", "stream"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2.5"

# For streaming responses
futures = "0.3"
bytes = "1.5"

# For configuration
config = "0.14"

# For FFI type safety
libc = "0.2"

# Time handling
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.2"
tempfile = "3.8"

[build-dependencies]
cc = "1.0"

[[example]]
name = "simple_generation"
path = "examples/simple_generation.rs"
