[package]
name = "maze"
version = "0.1.0"
edition = "2021"
authors = ["Ananke Contributors"]
description = "Maze orchestration layer for constrained code generation - coordinates between Zig constraint engines and GPU inference services"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ananke-project/ananke"
homepage = "https://github.com/ananke-project/ananke"
documentation = "https://docs.rs/maze"
readme = "README.md"
keywords = ["code-generation", "constraints", "llm", "inference", "orchestration"]
categories = ["development-tools", "api-bindings", "asynchronous"]
exclude = [
    "tests/*",
    "benches/*",
    ".github/*",
]

[lib]
name = "maze"
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "orchestration"
harness = false

[[bench]]
name = "constraint_compilation"
harness = false

[[bench]]
name = "cache_performance"
harness = false

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client for Modal/inference service communication
reqwest = { version = "0.11", features = ["json", "stream"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# URL parsing
url = "2.5"

# For streaming responses
futures = "0.3"
bytes = "1.5"

# For configuration
config = "0.14"

# For FFI type safety
libc = "0.2"

# Time handling
chrono = "0.4"

# High-performance hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# LRU cache
lru = "0.12"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py311"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"
tempfile = "3.8"
assert-json-diff = "2.0"
criterion = "0.5"

[build-dependencies]
cc = "1.0"

[[test]]
name = "integration"
path = "tests/integration/integration_tests.rs"

[[example]]
name = "simple_generation"
path = "examples/simple_generation.rs"

[[bench]]
name = "ffi_overhead"
harness = false
