[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ananke-maze"
version = "0.1.0"
description = "Maze orchestration layer for constrained code generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT OR Apache-2.0" }
authors = [
    { name = "Ananke Contributors" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries",
]
keywords = ["code-generation", "constraints", "llm", "inference", "orchestration"]

dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "maturin>=1.0.0",
]

[project.scripts]
ananke = "ananke_cli.main:cli"

[project.urls]
Homepage = "https://github.com/ananke-project/ananke"
Documentation = "https://docs.rs/maze"
Repository = "https://github.com/ananke-project/ananke"
"Bug Tracker" = "https://github.com/ananke-project/ananke/issues"

[tool.maturin]
python-source = "python"
module-name = "ananke"
bindings = "pyo3"
compatibility = "linux"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["python/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
